# zodiax

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.ini  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.json  setup.py  sitemap.xml
.github/workflows/: doccumentation.yml  documentation.yml  test.yml  tests.yml
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/CHANGELOG/: index.html
0.4.1/CONTRIBUTING/: index.html
0.4.1/docs/: populate_docs.ipynb
0.4.1/old/: setup.py
0.4.1/sandbox/: pytc_backend.ipynb  static_field_setter.ipynb
0.4.1/search/: search_index.json
0.4.1/tests/: conftest.py  test_bayes.py  test_tree.py
0.4.1/zodiax/: bayes.py  optimisation.py  tree.py
0.5.0/faq/: index.html
API/api/: index.html
API/base/: index.html
API/eqx/: index.html
API/optimisation/: index.html
API/stats/: index.html
API/tree/: index.html
CHANGELOG/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
base/base/: index.html
base/extended_base/: index.html
dev/: index.html  search.json
dev/faq/: index.html
dev/optimisation_tools/: index.html
docs/: advanced.md  extending.md  faq.md  index.md  optimisation_tools.md  pytree.md  usage.md
docs/API/: api.md  base.md  batching.md  bayes.md  diffops.md  equinox.md  eqx.md  filter.md  fisher.md  optimisation.md  serialisation.md  stats.md  tree.md
docs/base/: base.md  extended_base.md
docs/faq/: index.html
docs/filter/: filter_closure_convert.md  filter_custom_jvp.md  filter_custom_vjp.md  filter_eval_shape.md  filter_grad.md  filter_jit.md  filter_jvp.md  filter_make_jaxpr.md  filter_pmap.md  filter_pure_callback.md  filter_value_and_grad.md  filter_vjp.md  filter_vmap.md  overview.md
docs/notebooks/: Base.ipynb  ExtendedBase.ipynb  PyTree_interface.ipynb
docs/usage/: index.html
extending/: index.html
faq/: index.html
filter/filter_closure_convert/: index.html
filter/filter_custom_jvp/: index.html
filter/filter_custom_vjp/: index.html
filter/filter_eval_shape/: index.html
filter/filter_grad/: index.html
filter/filter_jit/: index.html
filter/filter_jvp/: index.html
filter/filter_make_jaxpr/: index.html
filter/filter_pmap/: index.html
filter/filter_pure_callback/: index.html
filter/filter_value_and_grad/: index.html
filter/filter_vjp/: index.html
filter/filter_vmap/: index.html
filter/overview/: index.html
latest/: 404.html  index.html  objects.inv  search.json
latest/optimisation_tools/: index.html
latest/usage/: index.html
optimisation_tools/: index.html
pytree/: index.html
search/: search_index.json
tests/: base.py  conftest.py  filter.py  serialisation.py  test_base.py  test_batching.py  test_bayes.py  test_diffops.py  test_equinox.py  test_eqx.py  test_fisher.py  test_jit.py  test_optimisation.py  test_serialisation.py  test_stats.py  test_tree.py  test_wrappers.py  utilities.py
usage/: index.html
v0.5.0/: objects.inv
zodiax/: __init__.py  base.py  bayes.py  equinox.py  eqx.py  filter.py  fisher.py  optimisation.py  serialisation.py  stats.py  tree.py  wrappers.py
(+77 files in other folders)
