[project]
name = "zodiax"
version = "0.5.0"
description = "Equinox extension for scientific programming."
readme = "README.md"
requires-python =">=3.8"
license = {file = "LICENSE.md"}
authors = [
  {name = "Louis Desdoigts", email = "louis.desdoigts@sydney.edu.au"},
]
keywords = []
urls = {repository = "https://github.com/LouisDesdoigts/zodiax"}
dependencies = ["jax", "jaxlib", "equinox", "optax"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "pre-commit", "mkdocs", "mkdocs-jupyter", "mkdocs-same-dir", "mkdocs-autorefs", "mkdocs-simple-plugin", "mkdocstrings-python", "jupyter_contrib_nbextensions", "notebook==6.4.12"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2