[project]
name = "zodiax"
version = "0.5.0"
description = "Equinox extension for scientific programming."
readme = "README.md"
requires-python =">=3.8"
license = {file = "LICENSE.md"}
authors = [
  {name = "Louis Desdoigts", email = "louis.desdoigts@sydney.edu.au"},
]
keywords = []
urls = {repository = "https://github.com/LouisDesdoigts/zodiax"}
dependencies = ["jax", "jaxlib", "equinox", "optax"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "pre-commit", "mkdocs", "mkdocs-same-dir", "mkdocs-autorefs", "mkdocstrings-python"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E731", "E741", "F722"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2